[workspace]
members = [
	"client",
	"core",
	"derive",
	"server",

	"examples/basic_auth",
	"examples/hello_world",
	"examples/pubsub",
]

resolver = "2"

[workspace.package]
version = "0.3.1"
authors = ["Janosch Gräf <janosch@nimiq.com>", "The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2021"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/jsonrpc"
license = "Apache-2.0"
categories = [
	"asynchronous",
	"network-programming",
	"web-programming::http-client",
	"web-programming::http-server",
	"web-programming::websocket"
]
keywords = ["json", "jsonrpc", "json-rpc", "nimiq", "rpc"]

[workspace.dependencies]
nimiq-jsonrpc-client = { version = "0.3.1", path = "client" }
nimiq-jsonrpc-core = { version = "0.3.1", path = "core" }
nimiq-jsonrpc-derive = { version = "0.3.1", path = "derive" }
nimiq-jsonrpc-server = { version = "0.3.1", path = "server" }
