[package]
name = "nimiq-jsonrpc-client"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
base64 = { version = "0.21", optional = true }
futures = "0.3"
http = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
log = "0.4"
reqwest = { version = "0.11", optional = true, features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.25", features = ["net", "sync"], optional = true }
tokio-tungstenite = { version = "0.19", optional = true }
url = "2.3"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

nimiq-jsonrpc-core = { path = "../core" }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

[dev-dependencies]
nimiq-jsonrpc-derive = { path = "../derive" }

[features]
default = ["http-client", "websocket-client"]
http-client = ["reqwest"]
wasm-websocket-client = ["js-sys", "tokio", "wasm-bindgen", "wasm-bindgen-futures", "web-sys"]
websocket-client = ["base64", "http", "tokio", "tokio/rt", "tokio-tungstenite"]
