[package]
name = "nimiq-jsonrpc-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "JSON-RPC client implementation"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
base64 = { version = "0.22", optional = true }
futures = "0.3"
http = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
log = "0.4"
reqwest = { version = "0.12", optional = true, features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.25", features = ["net", "sync"], optional = true }
tokio-tungstenite = { version = "0.23", optional = true }
url = "2.3"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

nimiq-jsonrpc-core = { workspace = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

[dev-dependencies]
nimiq-jsonrpc-derive = { workspace = true }

[features]
default = ["http-client", "websocket-client"]
http-client = ["reqwest"]
wasm-websocket-client = ["js-sys", "tokio", "wasm-bindgen", "wasm-bindgen-futures", "web-sys"]
websocket-client = ["base64", "http", "tokio", "tokio/rt", "tokio-tungstenite"]
