[package]
name = "nimiq-jsonrpc-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Core utilities for implementing libraries around JSON-RPC"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
log = "0.4"
serde = { version = "1.0 ", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
