[package]
name = "nimiq-jsonrpc-derive"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Derivation macros for generating JSON RPC methods"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

nimiq-jsonrpc-client = { path = "../client" }
nimiq-jsonrpc-core = { path = "../core" }
nimiq-jsonrpc-server = { path = "../server" }
