[package]
name = "nimiq-jsonrpc-client"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
reqwest = { version = "0.10", optional = true, features = ["json"] }
tokio-tungstenite = { version = "0.11", optional = true }
tungstenite = { version = "0.11", optional = true }
tokio = { version = "0.2", features = ["net", "sync", "stream"], optional = true }
http = { version = "0.2", optional = true }
base64 = { version = "0.12.3", optional = true }
url = "2.2"
serde_json = "1.0"
futures = "0.3"
nimiq-jsonrpc-core = { path = "../nimiq-jsonrpc-core" }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

[features]
default = ["http-client", "websocket-client"]
http-client = ["reqwest"]
websocket-client = ["tokio-tungstenite", "tokio", "tungstenite", "http", "base64"]
wasm-websocket-client = ["wasm-bindgen", "web-sys", "js-sys", "tokio", "wasm-bindgen-futures"]
