[package]
name = "nimiq-jsonrpc-client"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
log = "0.4"
thiserror = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", optional = true, features = ["json"] }
tokio-tungstenite = { version = "0.15", optional = true }
tokio = { version = "1.9", features = ["net", "sync"], optional = true }
http = { version = "0.2", optional = true }
base64 = { version = "0.12.3", optional = true }
url = "2.2"
serde_json = "1.0"
futures = "0.3"
nimiq-jsonrpc-core = { path = "../nimiq-jsonrpc-core" }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
async-stream = "0.3"

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

[dev-dependencies]
nimiq-jsonrpc-derive = { path = "../nimiq-jsonrpc-derive" }

[features]
default = ["websocket-client", "http-client"]
http-client = ["reqwest"]
websocket-client = ["tokio-tungstenite", "tokio", "base64", "http", "tokio/rt"]
wasm-websocket-client = ["wasm-bindgen", "web-sys", "js-sys", "tokio", "wasm-bindgen-futures"]
