[package]
name = "nimiq-jsonrpc-derive"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
darling = "0.10"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
nimiq-jsonrpc-core = { path = "../nimiq-jsonrpc-core" }
nimiq-jsonrpc-server = { path = "../nimiq-jsonrpc-server" }
nimiq-jsonrpc-client = { path = "../nimiq-jsonrpc-client" }
