[package]
name = "nimiq-jsonrpc-derive"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

nimiq-jsonrpc-client = { path = "../nimiq-jsonrpc-client" }
nimiq-jsonrpc-core = { path = "../nimiq-jsonrpc-core" }
nimiq-jsonrpc-server = { path = "../nimiq-jsonrpc-server" }
