[package]
name = "nimiq-jsonrpc-server"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2018"

[dependencies]
log = "0.4"
warp = "0.2"
futures = "0.3"
tokio = { version = "0.2", features = ["sync"] }
nimiq-jsonrpc-core = { path = "../nimiq-jsonrpc-core" }
async-trait = "0.1"
serde_json = "1.0"
bytes = "0.5"
http = "0.2"
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
nimiq-jsonrpc-derive = { path = "../nimiq-jsonrpc-derive" }
nimiq-jsonrpc-client = { path = "../nimiq-jsonrpc-client" }
anyhow = "1.0"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
pretty_env_logger = "0.4.0"
dotenv = "0.15"
