[package]
name = "nimiq-jsonrpc-server"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2021"

[dependencies]
log = "0.4"
warp = { git = "https://github.com/vlvrd/warp.git", branch = "sergio/auth" }
futures = "0.3"
tokio = { version = "1.9", features = ["sync"] }
nimiq-jsonrpc-core = { path = "../nimiq-jsonrpc-core" }
async-trait = "0.1"
serde_json = "1.0"
bytes = "1.0"
http = "0.2"
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
nimiq-jsonrpc-derive = { path = "../nimiq-jsonrpc-derive" }
nimiq-jsonrpc-client = { path = "../nimiq-jsonrpc-client" }
anyhow = "1.0"
tokio = { version = "1.9", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4.0"
dotenv = "0.15"
