[package]
name = "nimiq-jsonrpc-server"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1.4"
futures = "0.3"
http = "0.2"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.25", features = ["sync"] }
warp = { git = "https://github.com/vlvrd/warp.git", branch = "sergio/auth" }

nimiq-jsonrpc-core = { path = "../nimiq-jsonrpc-core" }

[dev-dependencies]
anyhow = "1.0"
dotenv = "0.15"
pretty_env_logger = "0.4.0"
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }

nimiq-jsonrpc-client = { path = "../nimiq-jsonrpc-client" }
nimiq-jsonrpc-derive = { path = "../nimiq-jsonrpc-derive" }
