[package]
name = "nimiq-jsonrpc-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "JSON-RPC server implementation"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0.1"
bytes = "1.4"
futures = "0.3"
headers = "0.3"
http = "0.2"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.25", features = ["sync"] }
warp =  "0.3"

nimiq-jsonrpc-core = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
pretty_env_logger = "0.5.0"
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }

nimiq-jsonrpc-client = { workspace = true }
nimiq-jsonrpc-derive = { workspace = true }
