[package]
name = "nimiq-jsonrpc-server"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "JSON-RPC server implementation"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
async-trait = "0.1"
blake2 = "0.10"
futures = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
subtle = "2.5"
thiserror = "2.0"
tokio = { version = "1.43", features = ["sync"] }
tower-http = { version = "0.6", features = ["auth", "cors"] }

nimiq-jsonrpc-core = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
pretty_env_logger = "0.5"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }

nimiq-jsonrpc-client = { workspace = true }
nimiq-jsonrpc-derive = { workspace = true }
