[package]
name = "basic-auth"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2018"
publish = false

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
dotenv = "0.15"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0 ", features = ["derive"] }
tokio = { version = "1.9", features = ["sync", "rt-multi-thread", "macros"] }
nimiq-jsonrpc-core = { path = "../../nimiq-jsonrpc-core" }
nimiq-jsonrpc-derive = { path = "../../nimiq-jsonrpc-derive" }
nimiq-jsonrpc-client = { path = "../../nimiq-jsonrpc-client" }
nimiq-jsonrpc-server = { path = "../../nimiq-jsonrpc-server" }
