[package]
name = "hello-world"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Very basic example for JSON-RPC usage"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["sync", "rt-multi-thread", "macros"] }

nimiq-jsonrpc-client = { workspace = true }
nimiq-jsonrpc-core = { workspace = true }
nimiq-jsonrpc-derive = { workspace = true }
nimiq-jsonrpc-server = { workspace = true }
