[package]
name = "pubsub"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
dotenv = "0.15"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0 ", features = ["derive"] }
tokio = { version = "1.25", features = ["sync", "rt-multi-thread", "macros", "time"] }

nimiq-jsonrpc-client = { path = "../../client" }
nimiq-jsonrpc-core = { path = "../../core" }
nimiq-jsonrpc-derive = { path = "../../derive" }
nimiq-jsonrpc-server = { path = "../../server" }
