[package]
name = "pubsub"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Example for JSON-RPC pub/sub"
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
dotenvy = "0.15"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5.0"
serde = { version = "1.0 ", features = ["derive"] }
tokio = { version = "1.25", features = ["sync", "rt-multi-thread", "macros", "time"] }

nimiq-jsonrpc-client = { workspace = true }
nimiq-jsonrpc-core = { workspace = true }
nimiq-jsonrpc-derive = { workspace = true }
nimiq-jsonrpc-server = { workspace = true }
